[project]
name = "nvdiffrast"
version = "0.3.4"
description = "nvdiffrast - modular primitives for high-performance differentiable rendering"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Samuli Laine", email = "slaine@nvidia.com" }
]
dependencies = [
    "ninja>=1.13.0",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/NVlabs/nvdiffrast"

[build-system]
requires = ["setuptools>=45", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvdiffrast*"]

[tool.setuptools.package-data]
nvdiffrast = [
    "common/*.h",
    "common/*.inl",
    "common/*.cu",
    "common/*.cpp",
    "common/cudaraster/*.hpp",
    "common/cudaraster/impl/*.cpp",
    "common/cudaraster/impl/*.hpp",
    "common/cudaraster/impl/*.inl",
    "common/cudaraster/impl/*.cu",
    "lib/*.h",
    "torch/*.h",
    "torch/*.inl",
    "torch/*.cpp",
    "tensorflow/*.cu",
]

